--- a/Gastos.Pwa/Components/Layout/PWASettings.razor
+++ b/Gastos.Pwa/Components/Layout/PWASettings.razor
@@ -12,7 +12,10 @@
         <MudIcon Icon="Icons.Material.Filled.Settings" Class="mr-2" />
         Configuración PWA
     </MudText>
-    <br />
+
+    <!-- Componente de Estado PWA con Actualizaciones -->
+    <PWAStatusCard />
+
     <MudGrid>
         <!-- Información de Instalación -->
         <MudItem xs="12">
