--- a/Gastos.Pwa/Components/Layout/MainLayout.razor
+++ b/Gastos.Pwa/Components/Layout/MainLayout.razor
@@ -23,6 +23,8 @@
     </MudMainContent>
 </MudLayout>
 
+<UpdateAvailableDetector />
+
 <div id="blazor-error-ui" data-nosnippet>
     An unhandled error has occurred.
     <a href="." class="reload">Reload</a>
