--- a/Gastos.Pwa/Components/Pages/HomePage.razor
+++ b/Gastos.Pwa/Components/Pages/HomePage.razor
@@ -4,7 +4,7 @@
 
 <PageHeading Title="@Loc.Get(RS.AppTitle)" IsHome="true" />
 
-<p>Versión 12 - Log UpdateAvailableDetector</p>
+<p>Versión 13 - Group logs sw-registrator</p>
 <MudContainer MaxWidth="MaxWidth.Large">
     <AuthorizeView>
         <Authorized>
