--- a/Gastos.Pwa/Components/Pages/HomePage.razor
+++ b/Gastos.Pwa/Components/Pages/HomePage.razor
@@ -4,7 +4,7 @@
 
 <PageHeading Title="@Loc.Get(RS.AppTitle)" IsHome="true" />
 
-<p>Versión 15 - excluido staticwebapp.config.json de comprobación hash</p>
+<p>Versión 16 - ruta específica staticwebapp.config.json</p>
 <MudContainer MaxWidth="MaxWidth.Large">
     <AuthorizeView>
         <Authorized>
