--- a/Gastos.Pwa/Components/Pages/HomePage.razor
+++ b/Gastos.Pwa/Components/Pages/HomePage.razor
@@ -4,7 +4,7 @@
 
 <PageHeading Title="@Loc.Get(RS.AppTitle)" IsHome="true" />
 
-<p>Versión 17 - manejo error staticwebapp.config.json</p>
+<p>Versión 18 - Comment out Azure routing test logic and remove config routes</p>
 <MudContainer MaxWidth="MaxWidth.Large">
     <AuthorizeView>
         <Authorized>
