--- a/Gastos.Pwa/Components/Pages/HomePage.razor
+++ b/Gastos.Pwa/Components/Pages/HomePage.razor
@@ -4,7 +4,7 @@
 
 <PageHeading Title="@Loc.Get(RS.AppTitle)" IsHome="true" />
 
-<p>Versión 22 - Simplifica logs consola 2</p>
+<p>Versión 23</p>
 <MudContainer MaxWidth="MaxWidth.Large">
     <AuthorizeView>
         <Authorized>
